GFC-464 enough changes for outcoming release. Adress too long left line not solved.

--- a/public/stylesheets/gform.css
+++ b/public/stylesheets/gform.css
@@ -111,6 +111,7 @@
 .summary--error .error-notification {
   padding-bottom: 0;
 }
+
 .table--font-reset td.summary-cell--error {
   color: #b10e1e;
   font-weight: bold;
@@ -265,3 +266,19 @@ table td:first-child.grid-layout__column--1-3 {
   width: calc(100% * 2/3);
   float: left;
 }
+/*should better use ASSET_FRONTEND instead Start*/
+.form-field-group--error {
+  border-left: 5px solid #b10e1e;
+  padding-left: 15px;
+}
+
+.error-notification + input {
+  border: 5px solid #b10e1e;
+}
+
+.error-notification {
+  font-size: 19px;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+/*should better use ASSET_FRONTEND instead End*/
